Read the demos as a user guide, and place two of them where they belong
`module-convention` closed the tour although it is the consumer side of
`publishing` and says so, so it moves behind it and `jpx` closes the tour again.
`module-classifier` taught what `platform-guard` already shows, on the same
library and with the same pin, so it is folded into it: the guard demo now
introduces the classifier in the pin value and proves the classified variant
resolved.

`demo/README.md` is a user guide rather than a tour of the engine: what to
declare, what to run and what comes out, with demos referred to by name rather
than by a section number that goes stale. The per-demo pages lose the passages
about step graphs, inventory bookkeeping, assembler wiring and cache identity,
and the launchers lose their comments, as the sources have none either.

The demo catalogue printed by `skill` and the count in the root README are
current again, and the root README no longer promises that no daemon runs.